--- a/app/templates/new_equipment.html
+++ b/app/templates/new_equipment.html
@@ -35,6 +35,11 @@
       rel="stylesheet"
       href="{{ url_for('static',filename='dist/css/skins/_all-skins.min.css') }}"
     />
+    <!-- Parsley CSS -->
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static',filename='parsley/parsley.css') }}"
+    />
 
     <!-- Bootstrap Date Picker -->
     <link
@@ -58,58 +63,74 @@
   <body class="hold-transition fixed skin-blue sidebar-mini">
     <!-- Site wrapper -->
     <div class="wrapper">
-        <header class="main-header">
+      <header class="main-header">
+        <!-- Logo -->
+        <a href="../../index2.html" class="logo">
+          <!-- mini logo for sidebar mini 50x50 pixels -->
+          <span class="logo-mini"><b>Zub</b>U</span>
+          <!-- logo for regular state and mobile devices -->
+          <span class="logo-lg">
+            <img
+              src="{{ url_for('static',filename='dist/img/ZubaCx_Logo.png') }}"
+              height="40px"
+              alt=""
+            />
+          </span>
+        </a>
 
-            <!-- Logo -->
-            <a href="../../index2.html" class="logo">
-             <!-- mini logo for sidebar mini 50x50 pixels -->
-             <span class="logo-mini"><b>Zub</b>U</span>
-             <!-- logo for regular state and mobile devices -->
-             <span class="logo-lg">
-               <img src="{{ url_for('static',filename='dist/img/ZubaCx_Logo.png') }}" height="40px" alt="">
-             </span>
-           </a>
-         
-             <!-- Header Navbar: style can be found in header.less -->
-             <nav class="navbar navbar-static-top">
-               <!-- Sidebar toggle button-->
-               <a href="#" class="sidebar-toggle" data-toggle="push-menu" role="button">
-                 <span class="sr-only">Toggle navigation</span>
-               </a>
-               <!-- Navbar Right Menu -->
-               <div class="navbar-custom-menu">
-                 <ul class="nav navbar-nav">
-                   <!-- User Account: style can be found in dropdown.less -->
-                   <li class="dropdown user user-menu">
-                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                       <img src="{{ url_for('static',filename='dist/img/user2-160x160.jpg') }}" class="user-image" alt="User Image">
-                       <span class="hidden-xs">{{currentUser[3]}}</span>
-                     </a>
-                     <ul class="dropdown-menu">
-                       <!-- User image -->
-                       <li class="user-header">
-                         <img src="{{ url_for('static',filename='dist/img/user2-160x160.jpg') }}" class="img-circle" alt="User Image">
-         
-                         <p>
-                             {{currentUser[3]}} - ({{currentUser[1]}} {{currentUser[2]}})
-                         </p>
-                       </li>
-                       <!-- Menu Footer-->
-                       <li class="user-footer">
-                         <div class="pull-left">
-                           <a href="#" class="btn btn-default btn-flat">Profile</a>
-                         </div>
-                         <div class="pull-right">
-                           <a href="#" class="btn btn-default btn-flat">Sign out</a>
-                         </div>
-                       </li>
-                     </ul>
-                   </li>
-                 </ul>
-               </div>
-         
-             </nav>
-           </header>
+        <!-- Header Navbar: style can be found in header.less -->
+        <nav class="navbar navbar-static-top">
+          <!-- Sidebar toggle button-->
+          <a
+            href="#"
+            class="sidebar-toggle"
+            data-toggle="push-menu"
+            role="button"
+          >
+            <span class="sr-only">Toggle navigation</span>
+          </a>
+          <!-- Navbar Right Menu -->
+          <div class="navbar-custom-menu">
+            <ul class="nav navbar-nav">
+              <!-- User Account: style can be found in dropdown.less -->
+              <li class="dropdown user user-menu">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                  <img
+                    src="{{ url_for('static',filename='dist/img/user2-160x160.jpg') }}"
+                    class="user-image"
+                    alt="User Image"
+                  />
+                  <span class="hidden-xs">{{ currentUser[3] }}</span>
+                </a>
+                <ul class="dropdown-menu">
+                  <!-- User image -->
+                  <li class="user-header">
+                    <img
+                      src="{{ url_for('static',filename='dist/img/user2-160x160.jpg') }}"
+                      class="img-circle"
+                      alt="User Image"
+                    />
+
+                    <p>
+                      {{ currentUser[3] }} - ({{ currentUser[1] }}
+                      {{ currentUser[2] }})
+                    </p>
+                  </li>
+                  <!-- Menu Footer-->
+                  <li class="user-footer">
+                    <div class="pull-left">
+                      <a href="#" class="btn btn-default btn-flat">Profile</a>
+                    </div>
+                    <div class="pull-right">
+                      <a href="#" class="btn btn-default btn-flat">Sign out</a>
+                    </div>
+                  </li>
+                </ul>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </header>
 
       <!-- =============================================== -->
 
@@ -348,7 +369,7 @@
               <h3 class="box-title">New Equipment Information</h3>
             </div>
             <div class="box-body">
-              <form role="form">
+              <form role="form" data-parsley-validate>
                 <div class="box-body">
                   <div class="row">
                     <div class="col-md-6">
@@ -554,7 +575,8 @@
 
     <!-- bootstrap Date picker -->
     <script src="{{ url_for('static',filename='vendor/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js') }}"></script>
-
+    <!-- Parsely JS -->
+    <script src="{{ url_for('static',filename='parsley/parsley.min.js') }}"></script>
     <script>
       $(document).ready(function() {
         $(".sidebar-menu").tree();
