--- a/app/templates/new_users.html
+++ b/app/templates/new_users.html
@@ -17,7 +17,11 @@
   <!-- AdminLTE Skins. Choose a skin from the css/skins
        folder instead of downloading all of them to reduce the load. -->
   <link rel="stylesheet" href="{{ url_for('static',filename='dist/css/skins/_all-skins.min.css') }}">
-
+  <!-- Parsley CSS -->
+  <link
+  rel="stylesheet"
+  href="{{ url_for('static',filename='parsley/parsley.css') }}"
+/>
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
   <!--[if lt IE 9]>
@@ -252,19 +256,19 @@
           <h3 class="box-title">New User Information</h3>
         </div>
         <div class="box-body">
-          <form role="form" action="/add_user" method="POST">
+          <form id="add-user-form" action="/add_user" method="POST" data-parsley-validate>
             <div class="box-body">
               <div class="row">
                 <div class="col-md-6">
                   <div class="form-group">
                     <label for="FirstName">First Name</label>
-                    <input type="text" name="user_first_name" class="form-control" placeholder="Enter First Name">
+                    <input type="text" required name="user_first_name" class="form-control" placeholder="Enter First Name">
                   </div>
                 </div>
                 <div class="col-md-6">
                   <div class="form-group">
                     <label for="LastName">Last Name</label>
-                    <input type="text" name="user_last_name" class="form-control" placeholder="Enter Last Name">
+                    <input type="text" required name="user_last_name" class="form-control" placeholder="Enter Last Name">
                   </div>
                 </div>
               </div>
@@ -272,13 +276,13 @@
                 <div class="col-md-6">
                   <div class="form-group">
                     <label for="EmailAddress">Email Address</label>
-                    <input type="text" name="user_email" class="form-control" placeholder="Enter Email Address">
+                    <input type="email" required name="user_email" class="form-control" placeholder="Enter Email Address">
                   </div>
                 </div>
                 <div class="col-md-6">
                   <div class="form-group">
                     <label for="PhysicalAddress">Physical Address</label>
-                    <input type="text" class="form-control" name="user_physical_address" placeholder="Enter Physical Address">
+                    <input type="text" required class="form-control" name="user_physical_address" placeholder="Enter Physical Address">
                   </div>
                 </div>
               </div>
@@ -286,13 +290,13 @@
                 <div class="col-md-6">
                   <div class="form-group">
                     <label for="PhoneNumber">Phone Number</label>
-                    <input type="text" class="form-control" name="user_phone" placeholder="Enter Phone Number">
+                    <input type="text" required data-parsley-type="number" class="form-control" name="user_phone" placeholder="Enter Phone Number">
                   </div>
                 </div>
                 <div class="col-md-6">
                   <div class="form-group">
                     <label for="Username">Username</label>
-                    <input type="text" class="form-control" name="user_name" placeholder="Enter Username">
+                    <input type="text" required class="form-control" name="user_name" placeholder="Enter Username">
                   </div>
                 </div>
               </div>
@@ -300,13 +304,13 @@
                 <div class="col-md-6">
                   <div class="form-group">
                     <label for="Password">Password</label>
-                    <input type="password" class="form-control" name="user_password" placeholder="Password">
+                    <input type="password" id="password" required class="form-control" name="user_password" placeholder="Password">
                   </div>
                 </div>
                 <div class="col-md-6">
                   <div class="form-group">
                     <label for="ConfirmPassword">Confirm Password</label>
-                    <input type="password" class="form-control" name="user_confirm_password" placeholder="Confirm Password">
+                    <input type="password" required data-parsley-equalto="#password" class="form-control" name="user_confirm_password" placeholder="Confirm Password">
                   </div>
                 </div>
               </div>
@@ -460,7 +464,7 @@
                   <button type="submit" class="btn btn-success btn-block">Submit</button>
                 </div>
                 <div class="col-md-3">
-                  <button type="submit" class="btn btn-dark btn-block" formnovalidate formaction="/dashboard">Cancel</button>
+                  <button type="submit" class="btn btn-default btn-block" formnovalidate formaction="/dashboard">Cancel</button>
                 </div>
               </div>
             </div>
@@ -496,11 +500,24 @@
 <script src="{{ url_for('static',filename='vendor/fastclick/lib/fastclick.js') }}"></script>
 <!-- AdminLTE App -->
 <script src="{{ url_for('static',filename='dist/js/adminlte.min.js') }}"></script>
-
+<!-- Parsely JS -->
+<script src="{{ url_for('static',filename='parsley/parsley.min.js') }}"></script>
 <script>
   $(document).ready(function () {
     $('.sidebar-menu').tree()
   })
+
+  $(function () {
+    $('#add-user-form').parsley().on('field:validated', function() {
+      var ok = $('.parsley-error').length === 0;
+      $('.bs-callout-info').toggleClass('hidden', !ok);
+      $('.bs-callout-warning').toggleClass('hidden', ok);
+    })
+    .on('form:submit', function() {
+      return false; // Don't submit form for this demo
+    });
+  });
+
 </script>
 </body>
 </html>
