--- a/app/templates/edit_engineer.html
+++ b/app/templates/edit_engineer.html
@@ -48,7 +48,11 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-
+    <!-- Parsley CSS -->
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static',filename='parsley/parsley.css') }}"
+    />
     <!-- Google Font -->
     <link
       rel="stylesheet"
@@ -58,58 +62,74 @@
   <body class="hold-transition fixed skin-blue sidebar-mini">
     <!-- Site wrapper -->
     <div class="wrapper">
-        <header class="main-header">
+      <header class="main-header">
+        <!-- Logo -->
+        <a href="../../index2.html" class="logo">
+          <!-- mini logo for sidebar mini 50x50 pixels -->
+          <span class="logo-mini"><b>Zub</b>U</span>
+          <!-- logo for regular state and mobile devices -->
+          <span class="logo-lg">
+            <img
+              src="{{ url_for('static',filename='dist/img/ZubaCx_Logo.png') }}"
+              height="40px"
+              alt=""
+            />
+          </span>
+        </a>
 
-            <!-- Logo -->
-            <a href="../../index2.html" class="logo">
-             <!-- mini logo for sidebar mini 50x50 pixels -->
-             <span class="logo-mini"><b>Zub</b>U</span>
-             <!-- logo for regular state and mobile devices -->
-             <span class="logo-lg">
-               <img src="{{ url_for('static',filename='dist/img/ZubaCx_Logo.png') }}" height="40px" alt="">
-             </span>
-           </a>
-         
-             <!-- Header Navbar: style can be found in header.less -->
-             <nav class="navbar navbar-static-top">
-               <!-- Sidebar toggle button-->
-               <a href="#" class="sidebar-toggle" data-toggle="push-menu" role="button">
-                 <span class="sr-only">Toggle navigation</span>
-               </a>
-               <!-- Navbar Right Menu -->
-               <div class="navbar-custom-menu">
-                 <ul class="nav navbar-nav">
-                   <!-- User Account: style can be found in dropdown.less -->
-                   <li class="dropdown user user-menu">
-                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                       <img src="{{ url_for('static',filename='dist/img/user2-160x160.jpg') }}" class="user-image" alt="User Image">
-                       <span class="hidden-xs">{{currentUser[3]}}</span>
-                     </a>
-                     <ul class="dropdown-menu">
-                       <!-- User image -->
-                       <li class="user-header">
-                         <img src="{{ url_for('static',filename='dist/img/user2-160x160.jpg') }}" class="img-circle" alt="User Image">
-         
-                         <p>
-                             {{currentUser[3]}} - ({{currentUser[1]}} {{currentUser[2]}})
-                         </p>
-                       </li>
-                       <!-- Menu Footer-->
-                       <li class="user-footer">
-                         <div class="pull-left">
-                           <a href="#" class="btn btn-default btn-flat">Profile</a>
-                         </div>
-                         <div class="pull-right">
-                           <a href="#" class="btn btn-default btn-flat">Sign out</a>
-                         </div>
-                       </li>
-                     </ul>
-                   </li>
-                 </ul>
-               </div>
-         
-             </nav>
-           </header>
+        <!-- Header Navbar: style can be found in header.less -->
+        <nav class="navbar navbar-static-top">
+          <!-- Sidebar toggle button-->
+          <a
+            href="#"
+            class="sidebar-toggle"
+            data-toggle="push-menu"
+            role="button"
+          >
+            <span class="sr-only">Toggle navigation</span>
+          </a>
+          <!-- Navbar Right Menu -->
+          <div class="navbar-custom-menu">
+            <ul class="nav navbar-nav">
+              <!-- User Account: style can be found in dropdown.less -->
+              <li class="dropdown user user-menu">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                  <img
+                    src="{{ url_for('static',filename='dist/img/user2-160x160.jpg') }}"
+                    class="user-image"
+                    alt="User Image"
+                  />
+                  <span class="hidden-xs">{{ currentUser[3] }}</span>
+                </a>
+                <ul class="dropdown-menu">
+                  <!-- User image -->
+                  <li class="user-header">
+                    <img
+                      src="{{ url_for('static',filename='dist/img/user2-160x160.jpg') }}"
+                      class="img-circle"
+                      alt="User Image"
+                    />
+
+                    <p>
+                      {{ currentUser[3] }} - ({{ currentUser[1] }}
+                      {{ currentUser[2] }})
+                    </p>
+                  </li>
+                  <!-- Menu Footer-->
+                  <li class="user-footer">
+                    <div class="pull-left">
+                      <a href="#" class="btn btn-default btn-flat">Profile</a>
+                    </div>
+                    <div class="pull-right">
+                      <a href="#" class="btn btn-default btn-flat">Sign out</a>
+                    </div>
+                  </li>
+                </ul>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </header>
 
       <!-- =============================================== -->
 
@@ -349,7 +369,10 @@
               <h3 class="box-title">Edit Engineer Information</h3>
             </div>
             <div class="box-body">
-              <form action="/edit_engineer/{{allTheEngineers[0]}}" method="POST">
+              <form
+                action="/edit_engineer/{{ allTheEngineers[0] }}"
+                method="POST"
+              >
                 <div class="box-body">
                   <div class="row">
                     <div class="col-md-6">
@@ -360,7 +383,7 @@
                         <input
                           type="text"
                           class="form-control"
-                          value="{{allTheEngineers[1]}}" 
+                          value="{{ allTheEngineers[1] }}"
                           name="engineer_first_name_edit"
                           placeholder="Enter Engineer First Name"
                         />
@@ -372,7 +395,7 @@
                         <input
                           type="text"
                           class="form-control"
-                          value="{{allTheEngineers[2]}}" 
+                          value="{{ allTheEngineers[2] }}"
                           name="engineer_last_name_edit"
                           placeholder="Enter Engineer Last Name"
                         />
@@ -388,7 +411,7 @@
                         <input
                           type="text"
                           class="form-control"
-                          value="{{allTheEngineers[3]}}" 
+                          value="{{ allTheEngineers[3] }}"
                           name="engineer_email_edit"
                           placeholder="Enter Email Address"
                         />
@@ -402,7 +425,7 @@
                         <input
                           type="text"
                           class="form-control"
-                          value="{{allTheEngineers[8]}}" 
+                          value="{{ allTheEngineers[8] }}"
                           name="engineer_address_edit"
                           placeholder="Enter Engineer Physical Address"
                         />
@@ -416,7 +439,7 @@
                         <input
                           type="text"
                           class="form-control"
-                          value="{{allTheEngineers[4]}}" 
+                          value="{{ allTheEngineers[4] }}"
                           name="engineer_phone_edit"
                           placeholder="Enter Engineer Phone"
                         />
@@ -431,33 +454,72 @@
                           <div class="col-md-4">
                             {% if allTheEngineers[5] == 0: %}
                             <div class="checkbox">
-                              <label> <input type="checkbox" name="engineer_field_ATM_edit" /> ATM </label>
+                              <label>
+                                <input
+                                  type="checkbox"
+                                  name="engineer_field_ATM_edit"
+                                />
+                                ATM
+                              </label>
                             </div>
                             {% else: %}
                             <div class="checkbox">
-                              <label> <input type="checkbox" name="engineer_field_ATM_edit" checked /> ATM </label>
+                              <label>
+                                <input
+                                  type="checkbox"
+                                  name="engineer_field_ATM_edit"
+                                  checked
+                                />
+                                ATM
+                              </label>
                             </div>
                             {% endif %}
                           </div>
                           <div class="col-md-4">
                             {% if allTheEngineers[6] == 0: %}
                             <div class="checkbox">
-                              <label> <input type="checkbox" name="engineer_field_AIR_edit"/> Airport </label>
+                              <label>
+                                <input
+                                  type="checkbox"
+                                  name="engineer_field_AIR_edit"
+                                />
+                                Airport
+                              </label>
                             </div>
                             {% else: %}
                             <div class="checkbox">
-                              <label> <input type="checkbox" name="engineer_field_AIR_edit" checked/> Airport </label>
+                              <label>
+                                <input
+                                  type="checkbox"
+                                  name="engineer_field_AIR_edit"
+                                  checked
+                                />
+                                Airport
+                              </label>
                             </div>
                             {% endif %}
                           </div>
                           <div class="col-md-4">
                             {% if allTheEngineers[7] == 0: %}
                             <div class="checkbox">
-                              <label> <input type="checkbox" name="engineer_field_TEL_edit" /> Telecom </label>
+                              <label>
+                                <input
+                                  type="checkbox"
+                                  name="engineer_field_TEL_edit"
+                                />
+                                Telecom
+                              </label>
                             </div>
                             {% else: %}
                             <div class="checkbox">
-                              <label> <input type="checkbox" name="engineer_field_TEL_edit" checked/> Telecom </label>
+                              <label>
+                                <input
+                                  type="checkbox"
+                                  name="engineer_field_TEL_edit"
+                                  checked
+                                />
+                                Telecom
+                              </label>
                             </div>
                             {% endif %}
                           </div>
@@ -475,19 +537,22 @@
                       </button>
                     </div>
                     <div class="col-md-3">
-                      <button 
-                      type="submit" 
-                      class="btn btn-danger btn-block"
-                      formaction="/all_the_engineers/{{allTheEngineers[0]}}"
-                      formnovalidate>
+                      <button
+                        type="submit"
+                        class="btn btn-danger btn-block"
+                        formaction="/all_the_engineers/{{ allTheEngineers[0] }}"
+                        formnovalidate
+                      >
                         Delete
                       </button>
                     </div>
                     <div class="col-md-3">
-                      <button type="submit" 
-                      class="btn btn-dark btn-block"
-                      formnovalidate 
-                      formaction="/dashboard">
+                      <button
+                        type="submit"
+                        class="btn btn-dark btn-block"
+                        formnovalidate
+                        formaction="/dashboard"
+                      >
                         Cancel
                       </button>
                     </div>
@@ -523,7 +588,8 @@
 
     <!-- bootstrap Date picker -->
     <script src="{{ url_for('static',filename='vendor/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js') }}"></script>
-
+    <!-- Parsely JS -->
+    <script src="{{ url_for('static',filename='parsley/parsley.min.js') }}"></script>
     <script>
       $(document).ready(function() {
         $(".sidebar-menu").tree();
