--- a/app/templates/edit_user.html
+++ b/app/templates/edit_user.html
@@ -24,7 +24,11 @@
   <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
-
+  <!-- Parsley CSS -->
+  <link
+  rel="stylesheet"
+  href="{{ url_for('static',filename='parsley/parsley.css') }}"
+/>
   <!-- Google Font -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
 </head>
@@ -654,7 +658,8 @@
 <script src="{{ url_for('static',filename='vendor/fastclick/lib/fastclick.js') }}"></script>
 <!-- AdminLTE App -->
 <script src="{{ url_for('static',filename='dist/js/adminlte.min.js') }}"></script>
-
+<!-- Parsely JS -->
+<script src="{{ url_for('static',filename='parsley/parsley.min.js') }}"></script>
 <script>
   $(document).ready(function () {
     $('.sidebar-menu').tree()
