--- a/app/templates/edit_users.html
+++ b/app/templates/edit_users.html
@@ -24,7 +24,11 @@
   <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
-
+  <!-- Parsley CSS -->
+  <link
+  rel="stylesheet"
+  href="{{ url_for('static',filename='parsley/parsley.css') }}"
+/>
   <!-- Google Font -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
 </head>
@@ -255,19 +259,19 @@
 
           {% include '_messages.html'%}
 
-          <form role="form" action="/edit_user/{{allTheUsers[0]}}" method="POST">
+          <form role="form" action="/edit_user/{{allTheUsers[0]}}" method="POST" data-parsley-validate>
             <div class="box-body">
               <div class="row">
                 <div class="col-md-6">
                   <div class="form-group">
                     <label for="FirstName">First Name</label>
-                    <input type="text" name="edit_user_first_name" class="form-control" placeholder="Enter First Name">
+                    <input type="text" required name="edit_user_first_name" class="form-control" placeholder="Enter First Name">
                   </div>
                 </div>
                 <div class="col-md-6">
                   <div class="form-group">
                     <label for="LastName">Last Name</label>
-                    <input type="text" name="edit_user_last_name" class="form-control" placeholder="Enter Last Name">
+                    <input type="text" required name="edit_user_last_name" class="form-control" placeholder="Enter Last Name">
                   </div>
                 </div>
               </div>
@@ -275,13 +279,13 @@
                 <div class="col-md-6">
                   <div class="form-group">
                     <label for="EmailAddress">Email Address</label>
-                    <input type="text" name="edit_user_email" class="form-control" placeholder="Enter Email Address">
+                    <input type="email" required name="edit_user_email" class="form-control" placeholder="Enter Email Address">
                   </div>
                 </div>
                 <div class="col-md-6">
                   <div class="form-group">
                     <label for="PhysicalAddress">Physical Address</label>
-                    <input type="text" class="form-control" name="edit_user_physical_address" placeholder="Enter Physical Address">
+                    <input type="text" required class="form-control" name="edit_user_physical_address" placeholder="Enter Physical Address">
                   </div>
                 </div>
               </div>
@@ -289,13 +293,13 @@
                 <div class="col-md-6">
                   <div class="form-group">
                     <label for="PhoneNumber">Phone Number</label>
-                    <input type="text" class="form-control" name="edit_user_phone" placeholder="Enter Phone Number">
+                    <input type="text" required class="form-control" name="edit_user_phone" placeholder="Enter Phone Number">
                   </div>
                 </div>
                 <div class="col-md-6">
                   <div class="form-group">
                     <label for="Username">Username</label>
-                    <input type="text" class="form-control" name="edit_user_name" placeholder="Enter Username">
+                    <input type="text" required class="form-control" name="edit_user_name" placeholder="Enter Username">
                   </div>
                 </div>
               </div>
@@ -303,13 +307,13 @@
                 <div class="col-md-6">
                   <div class="form-group">
                     <label for="Password">Password</label>
-                    <input type="password" class="form-control" name="edit_user_password" placeholder="Password">
+                    <input type="password" id="my_password_edit" required class="form-control" name="edit_user_password" placeholder="Password">
                   </div>
                 </div>
                 <div class="col-md-6">
                   <div class="form-group">
                     <label for="ConfirmPassword">Confirm Password</label>
-                    <input type="password" class="form-control" name="edit_user_confirm_password" placeholder="Confirm Password">
+                    <input type="password" required data-parsley-equalto="#my_password_edit" class="form-control" name="edit_user_confirm_password" placeholder="Confirm Password">
                   </div>
                 </div>
               </div>
@@ -499,7 +503,8 @@
 <script src="{{ url_for('static',filename='vendor/fastclick/lib/fastclick.js') }}"></script>
 <!-- AdminLTE App -->
 <script src="{{ url_for('static',filename='dist/js/adminlte.min.js') }}"></script>
-
+<!-- Parsely JS -->
+<script src="{{ url_for('static',filename='parsley/parsley.min.js') }}"></script>
 <script>
   $(document).ready(function () {
     $('.sidebar-menu').tree()
