Added Validation in New Customer Page

--- a/app/templates/new_customer.html
+++ b/app/templates/new_customer.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Zubac Uganda | New Customer Page</title>
+    <title>Zubacx | New Customer Page</title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta
       content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
@@ -381,6 +381,7 @@
                           class="form-control"
                           name="customer_name"
                           placeholder="Enter Customer Name"
+                          required
                         />
                       </div>
                     </div>
@@ -392,6 +393,7 @@
                           class="form-control"
                           name="customer_product"
                           placeholder="Enter Customer Product"
+                          required
                         />
                       </div>
                     </div>
@@ -407,6 +409,7 @@
                           class="form-control"
                           name="customer_address"
                           placeholder="Enter Customer Physical Address"
+                          required
                         />
                       </div>
                     </div>
@@ -418,6 +421,7 @@
                           class="form-control"
                           name="customer_phone"
                           placeholder="Enter Customer Phone"
+                          required
                         />
                       </div>
                     </div>
@@ -431,6 +435,7 @@
                           class="form-control"
                           name="customer_email"
                           placeholder="Enter Customer Email Address"
+                          required
                         />
                       </div>
                     </div>
