--- a/app/templates/all_tickets.html
+++ b/app/templates/all_tickets.html
@@ -226,6 +226,18 @@
               </a>
               
             </li>
+            <li class="">
+              <a href="/all_engineers">
+                <i class="fa fa-user-o"></i> <span>Engineers</span>
+              </a>
+              
+            </li>
+            <li class="">
+              <a href="/all_users">
+                <i class="fa fa-user-o"></i> <span>System Users</span>
+              </a>
+              
+            </li>
             {% endif%}
           <li class="">
             <a href="/tasks">
@@ -273,7 +285,6 @@
       </section>
       <!-- /.sidebar -->
     </aside>
-
       <!-- Content Wrapper. Contains page content -->
       <div class="content-wrapper">
         <!-- Content Header (Page header) -->
