--- a/app/templates/edit_ticket.html
+++ b/app/templates/edit_ticket.html
@@ -186,6 +186,18 @@
               </a>
               
             </li>
+            <li class="">
+              <a href="/all_engineers">
+                <i class="fa fa-user-o"></i> <span>Engineers</span>
+              </a>
+              
+            </li>
+            <li class="">
+              <a href="/all_users">
+                <i class="fa fa-user-o"></i> <span>System Users</span>
+              </a>
+              
+            </li>
             {% endif%}
           <li class="">
             <a href="/tasks">
