--- a/app/templates/edit_engineer.html
+++ b/app/templates/edit_engineer.html
@@ -134,217 +134,157 @@
       <!-- =============================================== -->
 
       <!-- Left side column. contains the sidebar -->
-      <aside class="main-sidebar">
-        <!-- sidebar: style can be found in sidebar.less -->
-        <section class="sidebar">
-          <!-- Sidebar user panel -->
-          <div class="user-panel">
-            <div class="pull-left image">
-              <img
-                src="{{ url_for('static',filename='dist/img/user2-160x160.jpg') }}"
-                class="img-circle"
-                alt="User Image"
-              />
+      <aside class="main-sidebar"> <aside class="main-sidebar">
+          <!-- sidebar: style can be found in sidebar.less -->
+          <section class="sidebar">
+            <!-- Sidebar user panel -->
+            <div class="user-panel">
+              <div class="pull-left image">
+                <img src="{{ url_for('static',filename='dist/img/user2-160x160.jpg') }}" class="img-circle" alt="User Image">
+              </div>
+              <div class="pull-left info">
+                <p>{{currentUser[3]}}</p>
+                <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
+              </div>
             </div>
-            <div class="pull-left info">
-              <p>{{ currentUser[3] }}</p>
-              <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
-            </div>
-          </div>
-
-          <!-- sidebar menu: : style can be found in sidebar.less -->
-          <ul class="sidebar-menu" data-widget="tree">
-            <li class="active">
-              <a href="{{ url_for('dashboard') }}">
-                <i class="fa fa-dashboard"></i> <span>Dashboard</span>
-              </a>
-            </li>
-            <li class="treeview">
-              <a href="#">
-                <i class="fa fa-hacker-news"></i> <span>New</span>
-                <span class="pull-right-container">
-                  <i class="fa fa-angle-left pull-right"></i>
-                  <small class="label pull-right bg-green">new</small>
-                </span>
-              </a>
-              <ul class="treeview-menu">
-                {% if currentUser[9] ==0:%} {% else:%}
-                <li>
-                  <a href="{{ url_for('new_users') }}"
-                    ><i class="fa fa-circle-o"></i> Add New User</a
-                  >
+      
+            <!-- sidebar menu: : style can be found in sidebar.less -->
+            <ul class="sidebar-menu" data-widget="tree">
+              <li class="active">
+                <a href="{{ url_for('dashboard') }}">
+                  <i class="fa fa-dashboard"></i> <span>Dashboard</span>
+                </a>
+              </li>
+                      <li class="treeview">
+                <a href="#">
+                  <i class="fa fa-hacker-news"></i>
+                  <span>New</span>
+                  <span class="pull-right-container">
+                    <i class="fa fa-angle-left pull-right"></i>
+                    <small class="label pull-right bg-green">new</small>
+                  </span>
+                </a>
+                <ul class="treeview-menu">
+                    {% if currentUser[9] ==0:%} {% else:%}
+                  <li><a href="{{ url_for('new_users') }}"><i class="fa fa-circle-o"></i> Add New User</a></li>
+                  {%endif%} {% if currentUser[13] ==0:%} {% else:%}
+                  <li><a href="{{ url_for('new_ticket') }}"><i class="fa fa-circle-o"></i> Add New Ticket</a></li>
+                  {%endif%} {% if currentUser[23] ==0:%} {% else:%}
+                  <li><a href="{{ url_for('new_customer') }}"><i class="fa fa-circle-o"></i> Add New Customer</a></li>
+                  {%endif%} {% if currentUser[24] ==0:%} {% else:%}
+                  <li><a href="{{ url_for('new_engineer') }}"><i class="fa fa-circle-o"></i> Add New Engineer</a></li>
+                  {%endif%} {% if currentUser[25] ==0:%} {% else:%}
+                  <li><a href="{{ url_for('new_equipment') }}"><i class="fa fa-circle-o"></i> Add New Equipment</a></li>
+                  {%endif%} {% if currentUser[26] ==0:%} {% else:%}
+                  <li><a href="{{ url_for('new_workorder') }}"><i class="fa fa-circle-o"></i> Add New Work Order</a></li>
+                  {%endif%}
+                </ul>
+              </li>
+              <li class="treeview">
+                <a href="#">
+                  <i class="fa fa-street-view"></i>
+                  <span>Views</span>
+                  <span class="pull-right-container">
+                    <i class="fa fa-angle-left pull-right"></i>
+                    <small class="label pull-right bg-primary">views</small>
+                  </span>
+                </a>
+                <ul class="treeview-menu">
+                    {% if currentUser[16] ==1:%}
+                  <li><a href="/all_open_and_overdue_tickets"><i class="fa fa-circle-o"></i> All Tickets</a></li>
+                  <li><a href="/open_and_overdue_tickets"><i class="fa fa-circle-o"></i> Open Tickets</a></li>
+                  <li><a href="/closed_and_overdue_tickets"><i class="fa fa-circle-o"></i> Closed Tickets</a></li>
+                  <li><a href="/low_priority_and_overdue_tickets"><i class="fa fa-circle-o"></i> Overdue Tickets</a></li>
+                  <li><a href="/all_my_open_and_overdue_tickets"><i class="fa fa-circle-o"></i> My Tickets</a></li>
+                  <li><a href="/my_open_and_overdue_tickets"><i class="fa fa-circle-o"></i> My Open Tickets</a></li>
+                  <li><a href="/my_closed_and_overdue_tickets"><i class="fa fa-circle-o"></i> My Closed Tickets</a></li>
+                  <li><a href="/my_low_priority_and_overdue_tickets"><i class="fa fa-circle-o"></i> My Overdue Tickets</a></li>
+                  {% else:%} {% if currentUser[13] ==1:%}
+                  <li><a href="/all_my_open_and_overdue_tickets"><i class="fa fa-circle-o"></i> My Tickets</a></li>
+                  <li><a href="/my_open_and_overdue_tickets"><i class="fa fa-circle-o"></i> My Open Tickets</a></li>
+                  <li><a href="/my_closed_and_overdue_tickets"><i class="fa fa-circle-o"></i> My Closed Tickets</a></li>
+                  <li><a href="/my_low_priority_and_overdue_tickets"><i class="fa fa-circle-o"></i> My Overdue Tickets</a></li>
+                  {% else:%} {%endif%} {%endif%}
+                </ul>
+              </li>
+              <li class="">
+                <a href="{{ url_for('view_all_tickets') }}">
+                  <i class="fa fa-ticket"></i> <span>Tickets</span>
+                </a>
+              </li>
+              {% if currentUser[23] ==0:%}
+              <li class="">
+                <a href="/robot">
+                  <i class="fa fa-user-o"></i> <span>Customers</span>
+                </a>
+                
+              </li>
+              {% else:%}
+              <li class="">
+                  <a href="/all_clients">
+                    <i class="fa fa-user-o"></i> <span>Customers</span>
+                  </a>
+                  
                 </li>
-                {%endif%} {% if currentUser[13] ==0:%} {% else:%}
-                <li>
-                  <a href="{{ url_for('new_ticket') }}"
-                    ><i class="fa fa-circle-o"></i> Add New Ticket</a
-                  >
+                <li class="">
+                  <a href="/all_engineers">
+                    <i class="fa fa-user-o"></i> <span>Engineers</span>
+                  </a>
+                  
                 </li>
-                {%endif%} {% if currentUser[23] ==0:%} {% else:%}
-                <li>
-                  <a href="{{ url_for('new_customer') }}"
-                    ><i class="fa fa-circle-o"></i> Add New Customer</a
-                  >
+                <li class="">
+                  <a href="/all_users">
+                    <i class="fa fa-user-o"></i> <span>System Users</span>
+                  </a>
+                  
                 </li>
-                {%endif%} {% if currentUser[24] ==0:%} {% else:%}
-                <li>
-                  <a href="{{ url_for('new_engineer') }}"
-                    ><i class="fa fa-circle-o"></i> Add New Engineer</a
-                  >
+                {% endif%}
+              <li class="">
+                <a href="/tasks">
+                  <i class="fa fa-tasks"></i> <span>Tasks</span>
+                </a>
+              </li>
+              <li class="">
+                <a href="/reports">
+                  <i class="fa fa-file-pdf-o"></i> <span>Reports</span>
+                </a>
+              </li>
+              {% if currentUser[13] ==0:%}
+              <li class="">
+                <a href="/robot">
+                  <i class="fa fa-ticket"></i> <span>Open Tickets</span>
+                </a>
+              </li>
+              {% else:%}
+              <li class="">
+                  <a href="{{ url_for('new_ticket') }}">
+                    <i class="fa fa-ticket"></i> <span>Open Tickets</span>
+                  </a>
                 </li>
-                {%endif%} {% if currentUser[25] ==0:%} {% else:%}
-                <li>
-                  <a href="{{ url_for('new_equipment') }}"
-                    ><i class="fa fa-circle-o"></i> Add New Equipment</a
-                  >
-                </li>
-                {%endif%} {% if currentUser[26] ==0:%} {% else:%}
-                <li>
-                  <a href="{{ url_for('new_workorder') }}"
-                    ><i class="fa fa-circle-o"></i> Add New Work Order</a
-                  >
-                </li>
-                {%endif%}
-              </ul>
-            </li>
-            <li class="treeview">
-              <a href="#">
-                <i class="fa fa-street-view"></i> <span>Views</span>
-                <span class="pull-right-container">
-                  <i class="fa fa-angle-left pull-right"></i>
-                  <small class="label pull-right bg-primary">views</small>
-                </span>
-              </a>
-              <ul class="treeview-menu">
-                {% if currentUser[16] ==1:%}
-                <li>
-                  <a href="/all_open_and_overdue_tickets"
-                    ><i class="fa fa-circle-o"></i> All Tickets</a
-                  >
-                </li>
-                <li>
-                  <a href="/open_and_overdue_tickets"
-                    ><i class="fa fa-circle-o"></i> Open Tickets</a
-                  >
-                </li>
-                <li>
-                  <a href="/closed_and_overdue_tickets"
-                    ><i class="fa fa-circle-o"></i> Closed Tickets</a
-                  >
-                </li>
-                <li>
-                  <a href="/low_priority_and_overdue_tickets"
-                    ><i class="fa fa-circle-o"></i> Overdue Tickets</a
-                  >
-                </li>
-                <li>
-                  <a href="/all_my_open_and_overdue_tickets"
-                    ><i class="fa fa-circle-o"></i> My Tickets</a
-                  >
-                </li>
-                <li>
-                  <a href="/my_open_and_overdue_tickets"
-                    ><i class="fa fa-circle-o"></i> My Open Tickets</a
-                  >
-                </li>
-                <li>
-                  <a href="/my_closed_and_overdue_tickets"
-                    ><i class="fa fa-circle-o"></i> My Closed Tickets</a
-                  >
-                </li>
-                <li>
-                  <a href="/my_low_priority_and_overdue_tickets"
-                    ><i class="fa fa-circle-o"></i> My Overdue Tickets</a
-                  >
-                </li>
-                {% else:%} {% if currentUser[13] ==1:%}
-                <li>
-                  <a href="/all_my_open_and_overdue_tickets"
-                    ><i class="fa fa-circle-o"></i> My Tickets</a
-                  >
-                </li>
-                <li>
-                  <a href="/my_open_and_overdue_tickets"
-                    ><i class="fa fa-circle-o"></i> My Open Tickets</a
-                  >
-                </li>
-                <li>
-                  <a href="/my_closed_and_overdue_tickets"
-                    ><i class="fa fa-circle-o"></i> My Closed Tickets</a
-                  >
-                </li>
-                <li>
-                  <a href="/my_low_priority_and_overdue_tickets"
-                    ><i class="fa fa-circle-o"></i> My Overdue Tickets</a
-                  >
-                </li>
-                {% else:%} {%endif%} {%endif%}
-              </ul>
-            </li>
-            <li class="">
-              <a href="{{ url_for('view_all_tickets') }}">
-                <i class="fa fa-ticket"></i> <span>Tickets</span>
-              </a>
-            </li>
-            {% if currentUser[23] ==0:%}
-            <li class="">
-              <a href="/robot">
-                <i class="fa fa-user-o"></i> <span>Customers</span>
-              </a>
-            </li>
-            {% else:%}
-            <li class="">
-              <a href="/all_clients">
-                <i class="fa fa-user-o"></i> <span>Customers</span>
-              </a>
-            </li>
-            {% endif%}
-            <li class="">
-              <a href="/tasks">
-                <i class="fa fa-tasks"></i> <span>Tasks</span>
-              </a>
-            </li>
-            <li class="">
-              <a href="/reports">
-                <i class="fa fa-file-pdf-o"></i> <span>Reports</span>
-              </a>
-            </li>
-            {% if currentUser[13] ==0:%}
-            <li class="">
-              <a href="/robot">
-                <i class="fa fa-ticket"></i> <span>Open Tickets</span>
-              </a>
-            </li>
-            {% else:%}
-            <li class="">
-              <a href="{{ url_for('new_ticket') }}">
-                <i class="fa fa-ticket"></i> <span>Open Tickets</span>
-              </a>
-            </li>
-            {% endif%}
-            <li>
-              <a href="pages/calendar.html">
-                <i class="fa fa-calendar"></i> <span>Calendar</span>
-                <span class="pull-right-container">
-                  <small class="label pull-right bg-red">3</small>
-                  <small class="label pull-right bg-blue">17</small>
-                </span>
-              </a>
-            </li>
-            <li>
-              <a href="pages/mailbox/mailbox.html">
-                <i class="fa fa-envelope"></i> <span>Mailbox</span>
-                <span class="pull-right-container">
-                  <small class="label pull-right bg-yellow">12</small>
-                  <small class="label pull-right bg-green">16</small>
-                  <small class="label pull-right bg-red">5</small>
-                </span>
-              </a>
-            </li>
-          </ul>
-        </section>
-        <!-- /.sidebar -->
-      </aside>
+              {% endif%}
+              <li>
+                <a href="pages/calendar.html">
+                  <i class="fa fa-calendar"></i> <span>Calendar</span>
+                  <span class="pull-right-container">
+                    <small class="label pull-right bg-red">3</small>
+                    <small class="label pull-right bg-blue">17</small>
+                  </span>
+                </a>
+              </li>
+              <li>
+                <a href="pages/mailbox/mailbox.html">
+                  <i class="fa fa-envelope"></i> <span>Mailbox</span>
+                  <span class="pull-right-container">
+                    <small class="label pull-right bg-yellow">12</small>
+                    <small class="label pull-right bg-green">16</small>
+                    <small class="label pull-right bg-red">5</small>
+                  </span>
+                </a>
+              </li>
+            </ul>
+          </section>
+          <!-- /.sidebar -->
+        </aside>
 
       <!-- =============================================== -->
 
