--- a/app/templates/new_workorder.html
+++ b/app/templates/new_workorder.html
@@ -298,6 +298,16 @@
                 <i class="fa fa-user-o"></i> <span>Customers</span>
               </a>
             </li>
+            <li class="">
+              <a href="/all_engineers">
+                <i class="fa fa-user-o"></i> <span>Engineers</span>
+              </a>
+            </li>
+            <li class="">
+              <a href="/all_users">
+                <i class="fa fa-user-o"></i> <span>System Users</span>
+              </a>
+            </li>
             {% endif%}
             <li class="">
               <a href="/tasks">
